--- a/Views/Pages/Chats/Chatroom.cshtml
+++ b/Views/Pages/Chats/Chatroom.cshtml
@@ -1,70 +1,70 @@
 ﻿@page "/Chats/{id}"
-@model Views.Pages.Chats.IndexModel
+@using Business
+@using Newtonsoft.Json
+@model Views.Pages.Chats.ChatroomModel
 @{
     ViewData["Title"] = "Chats";
     Layout = "_Layout";
+    User user = JsonConvert.DeserializeObject<User>(HttpContext.Session.GetString("LogedInUser"));
 }
 <div class="container-xl row">
     <div class="col-3 p-3">
         <h1 class="fs-1 text-dark fw-bold mb-3 pb-3 border-bottom">Chat room</h1>
-        <div class="w-100 overflow-y-auto overfow-x-hidden p-2 d-flex flex-column align-items-center">
+
+        @foreach (var item in Model.Chatboxes)
+        {
+            <div class="w-100 overflow-y-auto overfow-x-hidden p-2 d-flex flex-column align-items-center"></div>
             <div class="w-100 p-2 row justify-content-center align-items-center border border-dark rounded-pill mb-3 bg-secondary-subtle" role="button">
                 <div class="col-3">
-                    <img class="d-block w-100 h-100 object-fit-cover" src="~/images/static/user-avatar.png"/>
+                    <img class="d-block w-100 h-100 object-fit-cover" src="~/images/static/user-avatar.png" />
                 </div>
                 <div class="col-9 fs-5">
-                    <p class="mb-0 py-1 fs-4 fw-bold">Chat room</p>
-                    <p class="mb-0 py-1">@DateTime.UtcNow</p>
-                </div>
-            </div><div class="w-100 p-2 row justify-content-center align-items-center border border-dark rounded-pill mb-3 bg-secondary-subtle" role="button">
-                <div class="col-3">
-                    <img class="d-block w-100 h-100 object-fit-cover" src="~/images/static/user-avatar.png"/>
-                </div>
-                <div class="col-9 fs-5">
-                    <p class="mb-0 py-1 fs-4 fw-bold">Chat room</p>
-                    <p class="mb-0 py-1">@DateTime.UtcNow</p>
-                </div>
-            </div><div class="w-100 p-2 row justify-content-center align-items-center border border-dark rounded-pill mb-3 bg-secondary-subtle" role="button">
-                <div class="col-3">
-                    <img class="d-block w-100 h-100 object-fit-cover" src="~/images/static/user-avatar.png"/>
-                </div>
-                <div class="col-9 fs-5">
-                    <p class="mb-0 py-1 fs-4 fw-bold">Chat room</p>
-                    <p class="mb-0 py-1">@DateTime.UtcNow</p>
-                </div>
-            </div><div class="w-100 p-2 row justify-content-center align-items-center border border-dark rounded-pill mb-3 bg-secondary-subtle" role="button">
-                <div class="col-3">
-                    <img class="d-block w-100 h-100 object-fit-cover" src="~/images/static/user-avatar.png"/>
-                </div>
-                <div class="col-9 fs-5">
-                    <p class="mb-0 py-1 fs-4 fw-bold">Chat room</p>
+                    <p class="mb-0 py-1 fs-4 fw-bold">@item.Ticket.Title</p>
                     <p class="mb-0 py-1">@DateTime.UtcNow</p>
                 </div>
             </div>
-
-        </div>
-    </div>
-    <div class="col-9 border-start p-3">
-        <h1 class="fs-1 text-dark fw-bold mb-3 pb-3 border-bottom">Messages</h1>
-        <div class="w-100 overflow-y-scroll p-3" style="min-height: calc(100vh - 355px);">
-            <div class="d-flex justify-content-start mb-3">
-                <div class="d-flex flex-column">
-                    <span class="fs-4 text-dark fw-bold">John Doe</span>
-                    <span class="fs-5 text-secondary">Hello, how are you?</span>
-                </div>
-            </div>
-            <div class="d-flex justify-content-end mb-3">
-                <div class="d-flex flex-column align-items-end">
-                    <span class="fs-4 text-dark fw-bold">Jane Doe</span>
-                    <span class="fs-5 text-secondary">I'm fine, thank you!</span>
-                </div>
-            </div>
-        </div>
-        <form method="post" class="row justify-content-center px-3">
-            <div class="col-10 p-0">
-                <input type="text" class="form-control rounded-start-pill rounded-end-0" style="font-size:1.6rem" />
-            </div>
-            <button type="submit" class="btn btn-dark col-2 rounded-end-pill" style="font-size: 1.6rem;">Send</button>
-        </form>
+        }
     </div>
 </div>
+<div class="col-9 border-start p-3">
+    <h1 class="fs-1 text-dark fw-bold mb-3 pb-3 border-bottom">Messages</h1>
+    <div class="w-100 overflow-y-scroll p-3" style="min-height: calc(100vh - 355px);">
+        @foreach(var chat in Model.Chatbox.ChatMessages)
+        {
+            if (chat.SenderId != user.Id)
+            {
+                <div class="d-flex justify-content-end mb-3">
+                    <div class="d-flex flex-column align-items-end">
+                        <span class="fs-4 text-dark fw-bold">@Model.Chatbox.Buyer.Username</span>
+                        <span class="fs-5 text-secondary">@chat.Message</span>
+                    </div>
+                </div>
+            }
+            else
+            {
+                <div class="d-flex justify-content-start mb-3">
+                    <div class="d-flex flex-column">
+                        <span class="fs-4 text-dark fw-bold">@Model.Chatbox.Seller.Username</span>
+                        <span class="fs-5 text-secondary">@chat.Message</span>
+                    </div>
+                </div>
+            }
+        }
+
+        <div class="d-flex justify-content-start mb-3">
+            <div class="d-flex flex-column">
+                <span class="fs-4 text-dark fw-bold">@Model.Chatbox.Seller.Username</span>
+                <span class="fs-5 text-secondary" id="messageList"></span>
+            </div>
+        </div>
+        
+    </div>
+    <form method="post" class="row justify-content-center px-3">
+        <div class="col-10 p-0">
+            <input type="text" name="txtMessage" class="form-control rounded-start-pill rounded-end-0" style="font-size:1.6rem" />
+        </div>
+        <button type="submit" class="btn btn-dark col-2 rounded-end-pill" style="font-size: 1.6rem;" name="btnSendMessage">Send</button>
+    </form>
+</div>
+<script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
+<script src="~/js/chat.js"></script>
